# camera-player

./: .gitignore  CMakeLists.txt  build.bat  build.ps1
docs/: websocket.md
include/ai-camera/rtp/: h264source.h  irtptransport.h  media.h  mediasession.h  mediasource.h  nalsource.h  nalsourceffmpeg.h  rawh264source.h  rtp.h  rtpsender.h  rtptransport.h
include/ai-camera/rtsp/: rtsp.h  rtspmacro.h  rtspmgr.h  rtspprotocol.h  rtspserver.h  rtspsession.h
include/avtp/: avtp_h264_assembler.h  avtp_packet_parser.h  avtp_payload_assembler.h  cater_cam_assembler.h  cater_cam_parser.h
include/bcm/: bcm_rpc.h  bcm_types.h  bcmtool.h  file_transfer_server.h
include/clock/: timer.h
include/decoder/: i_decoder.hpp  jpeg_decoder.hpp
include/log/: logger.h  logmanager.h
include/media/: ffmpeg_frame_buffer.hpp  ffmpeg_packet_buffer.hpp  media_frame.hpp  media_packet.hpp  simple_buffer.hpp
include/net/: asio_io_context_pool.h  tcpserver.h  tcpsession.h
include/player/: avtp_player.h  cater_avtp_player.h  rtp_player.h
include/puller/: avtp_puller.hpp  ffmpeg_puller.hpp  i_puller.hpp  pcap_puller.hpp  rtp_udp_puller.hpp
include/queue/: mpmc_queue.h  spsc_queue.h
include/rtp/: h264_rtp_depacketizer.h  h264source.h  irtptransport.h  media.h  mediasession.h  mediasource.h  nalsource.h  rtp.h  rtp_packet_parser.h  rtptransport.h
include/rtsp/: rtspmgr.h  rtspserver.h  rtspsession.h
include/server/http/: http_parser.hpp  http_response.hpp  router.hpp  server.hpp  session.hpp
include/server/ws/: sha1.h  ws_handshake.hpp
include/someip/: someip.h
include/stream/: stream_info.h  stream_source.h
include/stream/jitterbuffer/: adaptive_jitter_buffer.h
include/stream/session/: stream_session.h
include/ui/: avtp_player_widget.h  cater_avtp_player_widget.h  main_window.h  page_menu.h  rtp_player_widget.h
resource/: logo.rc  resources.qrc  style.qss
src/: main.cpp
src/avtp/: avtp_h264_assembler.cpp  avtp_packet_parser.cpp  avtp_payload_assembler.cpp  cater_cam_assembler.cpp  cater_cam_parser.cpp
src/bcm/: bcm_rpc.cpp  bcmtool.cpp  file_transfer_server.cpp
src/decoder/: ffmpeg_decoder.cpp  jpeg_decoder.cpp
src/media/: ffmpeg_frame_buffer.cpp  ffmpeg_packet_buffer.cpp  media_buffer.cpp  media_frame.cpp  media_packet.cpp
src/player/: avtp_player.cpp  cater_avtp_player.cpp  rtp_player.cpp
src/puller/: avtp_puller.cpp  ffmpeg_puller.cpp  pcap_puller.cpp  rtp_udp_puller.cpp
src/rtp/: h264_rtp_depacketizer.cpp  h264source.cpp  mediasession.cpp  nalsource.cpp  nalsourceffmpeg.cpp  rawh264source.cpp  rtp_packet_parser.cpp  rtpsender.cpp  rtptransport.cpp
src/rtsp/: rtsp.cpp  rtspserver.cpp  rtspsession.cpp
src/server/http/: http_parser.cpp  http_response.cpp  router.cpp  server.cpp  session.cpp
src/server/ws/: ws_server.cpp
src/someip/: someip.cpp
src/stream/: stream_session.cpp  stream_source.cpp
src/ui/: avtp_player_widget.cpp  cater_avtp_player_widget.cpp  main_window.cpp  page_menu.cpp  rtp_player_widget.cpp
src/ws/: sha1.cpp
tests/: avtp_protocol_tests.cpp  rtp_protocol_tests.cpp
tools/: gen_test_h264.cpp
